# cais-fundraise

./: .gitignore  02-target-categories.md  04-data-model.md  06-inputs-needed.md  CLAUDE.md  README (2).md  README.md  classifier.md  env.example  pyproject.toml
config/: investor_profile.yaml
data/seeds/: example.csv
docs/: 03-architecture.md  04-data-model.md  05-build-phases.md  07-risks-out-of-scope.md
src/: classifier.py  cli.py  config.py  db.py  models.py
src/migrations/: 0001_initial.sql
src/output/: google_sheet.py
src/sources/: base.py  manual_csv.py
src/utils/: logging.py  names.py
tests/: conftest.py  test_dedupe.py  test_models.py  test_pipeline_smoke.py
tests/sources/: test_manual_csv.py
